# kotlin-2-3

./: .bazelrc  .bazelversion  .gitignore  BUILD  MODULE.bazel  README.bazel.md
src/: BUILD  Demo.kt
tools/format/: BUILD
tools/lint/: BUILD  linters.bzl
